--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
 /* large */
 @media (min-width: 1200px) {
   .container {
-    width: 1600px;
+    /* width: 1600px; */
     width: 1170px;
   }
 }
