--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -129,34 +129,15 @@
     grid-template-columns: repeat(auto-fill, minmax(49%, 1fr));
   }
 }
-.uploaded-image .list-diseases > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1 0 100px;
-  padding: 10px 0;
-}
-.uploaded-image .list-diseases > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1 0 100px;
-  padding: 10px 0;
-}
-.uploaded-image input {
-  /* border: none;
-  outline: none;
-  position: relative;
-  cursor: pointer;
-  width: 25px;
-  height: 25px; */
 
-  /* position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0; */
+.uploaded-image .list-diseases > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0 100px;
+  padding: 10px 0;
 }
+
 /* Hide the default checkbox */
 .container-label input {
   position: absolute;
@@ -172,6 +153,18 @@
   cursor: pointer;
   font-size: 1.5rem;
   user-select: none;
+}
+.boneloss-div {
+  position: relative;
+  width: fit-content;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 0.5rem;
+  margin-bottom: 10px;
+}
+.boneloss-div label {
+  cursor: pointer;
 }
 /* Create a custom checkbox */
 .checkmark {
@@ -234,38 +227,6 @@
     rotate: 0;
   }
 }
-/* .uploaded-image input::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: var(--dark-color);
-  border-radius: 2px;
-} */
-
-/* .uploaded-image input::after {
-  content: none;
-  font-family: "Font Awesome 6 free";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: var(--transition-5m);
-} */
-/* .uploaded-image input:checked::after {
-  content: "\f058";
-  color: var(--dark-color);
-  font-weight: 900;
-}
-.uploaded-image input:checked::before {
-  background-color: var(--main-color);
-} */
-/* .uploaded-image .list-diseases .body label {
-  padding-left: 15px;
-  font-size: 11px;
-} */
 
 .uploaded-image .waiting-data {
   position: relative;
@@ -409,4 +370,9 @@
 }
 .place.burlywood {
   border-color: burlywood;
+}
+
+canvas {
+  position: absolute;
+  z-index: 99;
 }
