--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,8 +1,18 @@
+body {
+  background-image: url("../Images/Background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
 /* === START HERO SECTION === */
 #hero {
   position: relative;
   height: 70vh;
   display: flex;
+  margin: 20px 10px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 0 var(--main-color) inset;
+  border: 4px solid var(--main-color);
 }
 #hero .overlay {
   position: absolute;
@@ -10,8 +20,11 @@
   left: 0;
   top: 0;
   opacity: 0.5;
+  display: none;
 }
 #hero video {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
   width: 100%;
   height: 100%;
 }
@@ -24,15 +37,30 @@
     width: 100%;
   }
   #hero video {
-    height: 70%;
+    /* display: non; */
+    position: relative;
+    transform: translateX(-50%);
+    left: 50%;
+    width: 55% !important;
+    height: 70% !important;
+    border-radius: 20px;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 768px) {
+  #hero video {
+    width: 70% !important;
   }
 }
 @media (max-width: 599px) {
   #hero .text h1 {
-    font-size: 40px !important;
+    font-size: 35px !important;
   }
   #hero .container .text span {
     font-size: 30px !important;
+  }
+  #hero video {
+    width: 95% !important;
   }
 }
 /* === END HERO SECTION === */
@@ -47,15 +75,26 @@
   background: #eee;
 }
 #products .container .uploading-images > img {
-  height: 200px;
+  height: 100px;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-  margin: 20px 0;
+  margin: 100px 0;
   object-fit: cover;
+}
+@media (max-width: 585px) {
+  #products .container .uploading-images > img {
+    margin: 50px 0;
+  }
 }
 #products .container .uploading-images .input input {
   display: none;
+}
+#products .container .uploading-images {
+  padding-top: 30px;
+  border-radius: 20px;
+  border: 3px solid var(--main-color);
+  box-shadow: 0 0 10px 0 var(--main-color) inset;
 }
 #products .container .uploading-images .input label {
   display: block;
@@ -63,6 +102,7 @@
   background-color: var(--main-color);
   border-radius: 10px;
   padding: 20px 0;
+  margin: 0 40px;
   color: var(--light-color);
   cursor: pointer;
   transition: var(--transition-5m);
@@ -104,9 +144,10 @@
 .uploaded-image .choosing-models > div {
   position: absolute;
 }
-.uploaded-image .choosing-models img.selected-image {
-  /* width: 100%; */
-}
+/* Make image within a frame */
+/* .uploaded-image .choosing-models img.selected-image {
+  width: 100%;
+} */
 .uploaded-image .list-diseases {
   text-align: center;
   padding: 30px;
