--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -74,13 +74,13 @@
 /* === END OUR VISION === */
 
 /* === START CHOOSE US === */
-#choose-us {
+#dental-vision {
   padding-bottom: var(--padding-bottom-100);
 }
-#choose-us .container .choose-cards {
+#dental-vision .container .choose-cards {
   margin-top: 50px;
 }
-#choose-us .container .card {
+#dental-vision .container .card {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 10px 10px 10px 0 var(--light-color);
@@ -89,24 +89,71 @@
   transition: var(--transition-5m);
   margin-bottom: 20px;
 }
-#choose-us .container .card:hover {
+#dental-vision .container .card:hover {
   box-shadow: 10px 10px 10px 10px var(--light-color);
   transform: translateY(-10px);
 }
-#choose-us .container .card img {
+#dental-vision .container .card img {
   width: 100%;
   height: 100px;
   margin-bottom: 20px;
 }
-#choose-us .container .card h3 {
+#dental-vision .container .card h3 {
   text-align: center;
   margin-bottom: 10px;
   color: var(--main-color);
   font-size: 25px;
 }
-#choose-us .container .card p {
+#dental-vision .container .card p {
   /* text-align: center; */
   color: var(--dark-color);
   font-size: 16px;
 }
 /* === END CHOOSE US === */
+
+/* === START GROUP MEMBERS === */
+#group-members .choose-cards {
+  margin-top: 100px;
+  gap: 1rem;
+}
+#group-members .choose-cards .card {
+  display: flex;
+  align-items: start;
+  border-radius: 10px;
+  box-shadow: 10px 10px 20px 0 var(--main-color);
+  height: fit-content;
+}
+#group-members .choose-cards .card > img {
+  height: 100%;
+  /* height: 250px; */
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+}
+#group-members .choose-cards .card .card-info {
+  padding: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#group-members .choose-cards .card .card-info h3 {
+}
+#group-members .choose-cards .card .card-info h4 {
+  font-weight: normal;
+  font-size: 14px;
+}
+#group-members .choose-cards .card .card-info a {
+  display: block;
+  width: fit-content;
+  border: 2px solid var(--main-color);
+  padding: 5px 10px;
+  border-radius: 10px;
+  transition: var(--transition-3m);
+}
+#group-members .choose-cards .card .card-info a:hover {
+  background-color: var(--main-color);
+  color: var(--light-color);
+}
+#group-members .choose-cards .card .card-info p {
+}
+/* === END GROUP MEMBERS === */
